Book Us page implemented, still to be styled and made responsive, some fixes to do on images, and mark up to be tidied also need to add commnets to make it more readable

--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -428,17 +428,20 @@ a{
 /*********************************Footer Styles*******************************************/
 footer{
     padding-top:8vh;
-    height:20vh;
+    padding-bottom: 5vh;
+    height:25vh;
     color:white;
     background-color:black;
 }
 
 .social-block{
+    
     display:flex;
     justify-content: center;
 }
 
 .social-button{
+    font-size:1.5em;
     position:relative;
     top:7px;
     height:4vh;
@@ -709,4 +712,35 @@ footer{
 
 .gallery-image:hover, .gallery-image:active {
     transform: scale(1.2);
+  }
+  
+  /*******************************Form Styles******************************************/
+  
+  .form-container{
+      padding:5% 0;
+      background-color:#222a50;
+      color:#fffce9;
+      font-size:1.2rem;
+  }
+  .form-container label{
+     font-family:'Martel', serif;
+      background-color:#222a50;
+      color:#fffce9;
+      font-size:1.2rem;
+      margin-bottom: 2vh;
+  }
+
+
+  .monkee-form{
+      padding:0 10%;
+      margin-bottom: 5vh;
+  }
+  
+  .form-button{
+      margin-top:5%;
+  }
+
+  .form-row{
+      padding:0 10%;
+      margin-bottom: 5vh;
   }
